--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload to Play Store
         uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_AC }}
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_SERVICES_JSON_CONTENT }}
           packageName: com.quran.labs.androidquran # <-- This is your specific package name
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal # Options: internal, alpha, beta, production
