--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,4 +1,4 @@
-STORE_FILE=./path/to/key
-STORE_PASSWORD=store_password
-KEY_ALIAS=alias
-KEY_PASSWORD=key_password
+STORE_FILE=./release.jks
+STORE_PASSWORD=S3curedP@sswOrd1283
+KEY_ALIAS=Quran_app
+KEY_PASSWORD=S3curedP@sswOrd1283
