--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,4 +1,7 @@
+# Update this specific line to point to the temporary location
 STORE_FILE=./release.jks
-STORE_PASSWORD=S3curedP@sswOrd1283
+
+# Ensure these properties match your GitHub Secret names exactly
+STORE_PASSWORD=S3curedP@ssword1283
 KEY_ALIAS=Quran_app
-KEY_PASSWORD=S3curedP@sswOrd1283
+KEY_PASSWORD=S3curedP@ssword1283
