--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Build and Publish Quran Android App
 
 on:
   push:
-    branches: [ main ] # Trigger the workflow when pushing to the main branch
+    branches: [ main ] # Trigger on pushes to the main branch
 
 jobs:
   release:
@@ -10,22 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # --- Step 1: Decode Keystore and Set Environment Variables ---
-      # This step creates the physical keystore file that Gradle will use for signing.
-      - name: Prepare Keystore and Environment Variables
+      # --- Step 1: Decode Keystore from Secrets ---
+      # This step creates the physical 'release.jks' file that gradle.properties points to.
+      - name: Decode Keystore file
         run: |
-          # 1. Decode the base64 secret into a physical file named 'release.jks'
           echo ${{ secrets.RELEASE_KEYSTORE }} | base64 --decode > release.jks
-          
-          # 2. Set environment variables that Gradle will read
-          # Note: The KEYSTORE_PASSWORD/KEY_PASSWORD/KEY_ALIAS can also be read directly
-          #       if you update your app/build.gradle to use System.getenv()
-          echo "KEYSTORE_FILE_PATH=$GITHUB_WORKSPACE/release.jks" >> $GITHUB_ENV
-          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
-          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
-          echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
-      # -----------------------------------------------------------
-
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -33,20 +23,21 @@ jobs:
           distribution: 'temurin'
           
       - name: Build and Sign AAB
-        # This command builds your signed Android App Bundle (.aab file)
-        # Ensure your app/build.gradle uses System.getenv() for signing details
-        run: ./gradlew bundleRelease
+        # This command uses the properties from gradle.properties and finds the release.jks file.
+        # It should no longer fail with "Keystore file not found".
+        # We specify the 'madani' flavor task.
+        run: ./gradlew bundleMadaniRelease
 
       # --- Step 2: Upload to Google Play Store ---
       - name: Upload Artifact to Play Store
         uses: r0adkll/upload-google-play@v1
         with:
-          # Use the PLAY_SERVICE_ACCOUNT_JSON secret for authentication
+          # Use the secret name you configured for your JSON key file
           serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
-          # Use the specified application ID
-          packageName: quran.android.application 
-          # Specify where the built AAB file is located (check your build outputs)
-          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+          # Use the correct application ID from your build.gradle
+          packageName: com.quran.labs.androidquran 
+          # Specify the path for the specific flavor's AAB file
+          releaseFiles: app/build/outputs/bundle/madaniRelease/app-madani-release.aab
           track: internal # Options: internal, alpha, beta, production
           status: completed
 
