--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,28 +4,37 @@ on:
   push:
     branches: [ main ] # Trigger on pushes to the main branch
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   release:
+    name: Build and Upload
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout the Code
+        uses: actions/checkout@v6 # Use the same checkout version as your working file
 
       # --- Step 1: Decode Keystore from Secrets ---
-      # This step creates the physical 'release.jks' file that gradle.properties points to.
+      # This creates the physical 'release.jks' file that gradle.properties points to.
       - name: Decode Keystore file
         run: |
           echo ${{ secrets.RELEASE_KEYSTORE }} | base64 --decode > release.jks
       
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Setup JDK
+        uses: actions/setup-java@v5 # Use the same setup-java version as your working file
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          # Use your specific java version file if needed, otherwise '17' as before
+          distribution: zulu # Using 'zulu' as seen in the working file
+          java-version: '17' 
           
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5 # Use the same setup-gradle version
+
       - name: Build and Sign AAB
-        # This command uses the properties from gradle.properties and finds the release.jks file.
-        # It should no longer fail with "Keystore file not found".
-        # We specify the 'madani' flavor task.
+        # This command targets the 'bundleMadaniRelease' task, which requires signing.
+        # It finds the 'release.jks' file via your gradle.properties config.
         run: ./gradlew bundleMadaniRelease
 
       # --- Step 2: Upload to Google Play Store ---
@@ -34,7 +43,7 @@ jobs:
         with:
           # Use the secret name you configured for your JSON key file
           serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
-          # Use the correct application ID from your build.gradle
+          # Use the correct application ID from your app/build.gradle
           packageName: com.quran.labs.androidquran 
           # Specify the path for the specific flavor's AAB file
           releaseFiles: app/build/outputs/bundle/madaniRelease/app-madani-release.aab
