--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ignore local keystore files and the temporary file created by GitHub Actions
-*.jks
-*.p12
-keystore.p12
-release.jks
 .project
 .settings
 .kotlin
@@ -27,3 +22,9 @@ crashlytics-build.properties
 com_crashlytics_export_strings.xml
 extras
 app/google-services.json
+# --- Added lines below this point ---
+*.jks
+*.p12
+keystore.p12
+release.jks
+
