--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,5 +1,5 @@
 # Update this specific line to point to the temporary location
-STORE_FILE=./release.jks
+#STORE_FILE=./release.jks
 
 # Ensure these properties match your GitHub Secret names exactly
 STORE_PASSWORD=S3curedP@ssword1283
