--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,11 +16,14 @@ jobs:
       - name: Checkout the Code
         uses: actions/checkout@v6
 
-      # --- THIS STEP FIXES THE MISSING FILE ERROR ---
-      - name: Decode Keystore file
+      # --- THIS STEP DECODES THE KEYSTORE AND SETS THE PATH ENV VAR ---
+      - name: Prepare Keystore File Path
         run: |
+          # Decode the secret into a file
           echo ${{ secrets.RELEASE_KEYSTORE }} | base64 --decode > release.jks
-      # -----------------------------------------------
+          # Set the environment variable that Gradle will read
+          echo "KEYSTORE_FILE_PATH=$GITHUB_WORKSPACE/release.jks" >> $GITHUB_ENV
+      # ---------------------------------------------------------------
       
       - name: Setup JDK
         uses: actions/setup-java@v5
@@ -32,7 +35,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
 
       - name: Build and Sign AAB
-        # This task now finds the release.jks file via the path in gradle.properties
+        # This now relies purely on the app/build.gradle change below
         run: ./gradlew bundleMadaniRelease
 
       - name: Upload Artifact to Play Store
