--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,6 @@
 # publish.yml
-# Build and Publish Quran Android App
-# This workflow builds a signed Android App Bundle (AAB) and uploads it to the Google Play Store's internal track.
-# It includes security improvements like temporary keystore handling and cleanup.
+# Build and Publish Quran Android App (UNSIGNED AAB)
+# Google Play App Signing will handle signing
 
 name: Build and Publish Quran Android App
 
@@ -17,58 +16,15 @@ jobs:
   release:
     name: Build and Upload
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout the Code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
-      # --- Prepare Keystore in a Temporary Directory for Security ---
-      - name: Prepare Keystore File Path
-        run: |
-          # Create a temporary directory for the keystore
-          mkdir -p temp_keystore
-          # Decode the secret into the temp file
-          echo ${{ secrets.RELEASE_KEYSTORE }} | base64 --decode > temp_keystore/release.jks
-          # Set the environment variable that Gradle will read
-          echo "KEYSTORE_FILE_PATH=$GITHUB_WORKSPACE/temp_keystore/release.jks" >> $GITHUB_ENV
-      # ---------------------------------------------------------------
-
-      - name: Setup JDK
-        uses: actions/setup-java@v5
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: '17'
 
-      # --- Cache Gradle Dependencies for Faster Builds ---
-      - name: Cache Gradle
-        uses: actions/cache@v4
-        with:
-          path: ~/.gradle/caches
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-      # ---------------------------------------------------
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v5
-
-      - name: Build and Sign AAB
-        # This relies on the app/build.gradle using the KEYSTORE_FILE_PATH env var for signing
-        run: ./gradlew bundleMadaniRelease
-
-      # --- Verify the AAB Exists Before Upload ---
-      - name: Verify AAB
-        run: ls -la app/build/outputs/bundle/madaniRelease/app-madani-release.aab
-      # --------------------------------------------
-
-      - name: Upload Artifact to Play Store
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
-          packageName: com.quran.labs.androidquran
-          releaseFiles: app/build/outputs/bundle/madaniRelease/app-madani-release.aab
-          track: internal
-          status: completed
-
-      # --- Cleanup Temporary Files for Security ---
-      - name: Cleanup Keystore
-        run: rm -rf temp_keystore
-        if: always()  # Run even if previous steps fail
-      # --------------------------------------------
+      # Cache Gradle for faster builds
