--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,3 +28,32 @@ jobs:
           java-version: '17'
 
       # Cache Gradle for faster builds
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
+
+      # 🔑 NO SIGNING — Build UNSIGNED AAB
+      - name: Build Release AAB (Unsigned)
+        run: ./gradlew bundleMadaniRelease
+
+      # Verify output
+      - name: Verify AAB
+        run: ls -la app/build/outputs/bundle/madaniRelease/
+
+      # Upload to Google Play (Google signs it)
+      - name: Upload Artifact to Play Store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
+          packageName: com.quran.labs.androidquran
+          releaseFiles: app/build/outputs/bundle/madaniRelease/app-madani-release.aab
+          track: internal
+          status: completed
+
